webui: Fix Tools icon alignment

--- a/release/src/router/www/index_style.css
+++ b/release/src/router/www/index_style.css
@@ -714,7 +714,7 @@ width:122px;
 }
 ._Tools_Sysinfo{
   background: url(images/New_ui/icon_indexes.png);
-  background-position: -0px -340px; width: 43px; height: 43px;
+  background-position: -0px -346px; width: 43px; height: 43px;
 }
 ._cloud_main{
   background: url(images/New_ui/icon_indexes.png);
